# connectedhomeip

examples/bridge-app/esp32/: CMakeLists.txt
examples/bridge-app/esp32/main/: CMakeLists.txt  Device.cpp  main.cpp
examples/bridge-app/esp32/main/include/: Device.h
